syntax = "proto3";

option go_package = "wrt-orders.v1";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns(CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns(GetOrderResponse);
}

message Order {
  uint32 orderID = 1;
  uint32 customerID = 2;
  uint32 productID = 3;
  uint32 quantity = 4;
}

message CreateOrderRequest {
  uint32 customerID = 1;
  uint32 productID = 2;
  uint32 quantity = 3;
}

message CreateOrderResponse {
  string status = 1;
}

message GetOrderRequest {
  uint32 customerID = 1;
}

message GetOrderResponse {
  repeated Order orders = 1;
}